# automidi

./: .gitignore  README.md  config.example.json  pyproject.toml  requirements.txt  run_pipeline.ps1  setup_uv_env.ps1
lib/: config.py  game_runner.py  tempo.py  uvr5_runner.py  worktree.py
scripts/: detect_tempo.py  pair.py  pipeline.py  run_game.py  run_uvr5.py
