[project]
name = "automidi"
version = "0.1.0"
description = "Local audio-to-midi pipeline utilities."
requires-python = ">=3.10"
dependencies = [
    "audio-separator",
    "librosa",
    "numpy",
    "onnxruntime",
    "scipy",
    "soundfile",
    "torch"
]

[dependency-groups]
uvr5-gpu = [
    "onnxruntime-gpu",
    "torchaudio",
    "torchvision",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
